changes transferred to the public project